--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ sentence-transformers==5.1.0
 faiss-cpu==1.12.0
 langchain-groq==0.3.8
 langchain-huggingface==0.3.1
-rank-bm25==0.2.2
+rank_bm25==0.2.2
 numpy==2.2.6
 python-dotenv==1.1.1
 fastapi==0.116.2
